# self-flying-drone

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  mkdocs.yml  prek.toml  pyproject.toml  ruff.toml  setup.py  ty.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: deploy-docs.yml  quality-gate.yml
docs/: index.md
docs/appendix/: bom-template.md  glossary.md  interface-contracts.md  open-source-licenses.md  references.md
docs/assets/stylesheets/: extra.css
docs/buy/: airframe-propulsion.md  compute-cameras.md  flight-control-navigation.md  links-radios.md  power-wiring.md  procurement-checklist.md  reference-configurations.md
docs/implementation/: index.md  sitl-flight-check.md  sitl-smoke-test.md
docs/javascripts/: mermaid-init.js
docs/operations/: failsafe-design.md  safety-legal.md  test-gates.md
docs/software/: development-stack.md  ground-inference.md  onboard-inference.md  simulation-testing.md  system-architecture.md
docs/start/: configuration-chooser.md  design-principles.md  learning-path.md  roadmap.md
pre-commit/: pyproject.toml
pre-commit/src/pre_commit/: check_branch_name.py
pre-commit/tests/: __init__.py  test_check_branch_name.py
sitl/: README.md  pyproject.toml
sitl/src/sitl/: __init__.py  artifacts.py  flight_check.py  preflight.py  run.py  smoke_test.py  telemetry.py
sitl/tests/: __init__.py  test_artifacts.py  test_flight_check.py  test_preflight.py  test_run.py  test_smoke_test.py  test_telemetry.py
src/drone_build/: __init__.py
tests/: __init__.py  test_package_metadata.py  test_setup_script.py
tests/tools/: __init__.py
tests/tools/git/: __init__.py  test_check_branch_name.py
tests/tools/sitl/: __init__.py  test_artifacts.py  test_flight_check.py  test_preflight.py  test_run.py  test_smoke_test.py  test_telemetry.py
tools/git/: __init__.py
tools/sitl/: README.md  __init__.py  artifacts.py  flight_check.py  preflight.py  run.py  smoke_test.py  telemetry.py
