[project]
name = "drone-build"
version = "0.1.0"
description = "Custom drone build including Docs, Simulation and Operation Code."
readme = "README.md"
authors = [
    { name = "Matthias Rath", email = "matthias.rath4@gmail.com" }
]
requires-python = ">=3.14"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "prek>=0.4.8",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material<10.0",
]
sim = [
    "aioconsole>=0.8.2",
    "mavsdk>=3.15.3",
    "orjson>=3.11.9",
    "pymavlink>=2.4.49",
    "typer>=0.20.0",
]
