[project]
name = "drone-build"
version = "0.1.0"
description = "Custom drone build including Docs, Simulation and Operation Code."
readme = "README.md"
authors = [
    { name = "Matthias Rath", email = "matthias.rath4@gmail.com" }
]
requires-python = ">=3.14"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["pre-commit", "sitl"]

[dependency-groups]
dev = [
    "pre-commit",
    "prek>=0.4.9",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "ty>=0.0.58",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material<10.0",
]
sim = [
    "sitl",
]

[tool.uv.sources]
pre-commit = { workspace = true }
sitl = { workspace = true }

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
