[project]
name = "pre-commit"
version = "0.1.0"
description = "Local pre-commit hooks for the drone build guide."
requires-python = ">=3.14"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
check-branch-name = "pre_commit.check_branch_name:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]
